tests/rosetta/out/Fortran/ackermann-function.error
gfortran: exit status 1
/tmp/ackermann-function.f90:8:3:

    8 |   main()
      |   1
Error: Unclassifiable statement at (1)
